--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "sakda homhuan",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.20.3",
         "express": "^4.21.2",
         "pg": "^8.13.1"
     }
