--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "body-parser": "^1.20.3",
         "express": "^4.21.2",
         "pg": "^8.13.1"
+    },
+    "devDependencies": {
+        "gh-pages": "^5.0.0"
     }
 }
