--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy Static Web App to GitHub Pages
+name: Deploy to Render
 
 on:
   push:
     branches:
-      - main  # Runs workflow when pushing to main branch
+      - main
 
 jobs:
   deploy:
@@ -13,8 +13,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GH_PAT }}
-          publish_dir: ./www  
+      - name: Trigger Render Deployment
+        run: |
+          curl -X POST https://api.render.com/deploy/srv-cuul362n91rc738j9ga0?key=VzqMx5qavQY?key=rnd_seNMIykDuQADnXC02lPJ7rPlNK29
